deployments/gitlab-live/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab-live
  labels:
    app: gitlab
    # istio-injection: enabled # Not supported by vanilla helm chart
