deployments/gitlab-live/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gitlab
spec:
  hosts:
    - gitlab.erpf.de
  gateways:
    - gitlab
  http:
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          port:
            number: 8181
          host: gitlab-webservice-default

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: registry
spec:
  hosts:
    - registry.erpf.de
  gateways:
    - registry
  http:
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          port:
            number: 5000
          host: gitlab-registry

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: minio
spec:
  hosts:
    - minio.erpf.de
  gateways:
    - minio
  http:
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          port:
            number: 9000
          host: gitlab-minio-svc
